# sesame-wake

./: .env.example  .gitignore  README.md  pyproject.toml  sesame_launcher.py
.github/workflows/: ci.yml
models/: goodbye_jarvis.onnx  goodbye_jarvis.tflite
sesame_wake/: __init__.py  cli.py  config.py  listener.py  logging_setup.py  session.py  sounds.py  speaker.py  tui.py
